--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>KhawLiang's Website</title>
+        <script src="https://www.gptbots.ai/widget/weucvyvkpfxyukvlkkbwbyc/chat.js"></script>
         <link rel="stylesheet" href="style.css"
     </head>
     <body class="lightmode">
