--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>KhawLiang's Website</title>
+        <!--- Iframe -->
+        <iframe width="100%" height="100%" allow="microphone *" src="https://www.gptbots.ai/widget/eez5swzysx8wcvcncdiq3ee/chat.html"></iframe>
+        <!--- Bubble Widget -->
         <script src="https://www.gptbots.ai/widget/weucvyvkpfxyukvlkkbwbyc/chat.js"></script>
         <link rel="stylesheet" href="style.css"
     </head>
