annotated iframe and bubble widget

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Bubble Widget -->
-    <script src="https://www.gptbots.ai/widget/weucvyvkpfxyukvlkkbwbyc/chat.js" defer></script>
+    <!-- <script src="https://www.gptbots.ai/widget/weucvyvkpfxyukvlkkbwbyc/chat.js" defer></script> -->
 </head>
 <body class="lightmode">
 
@@ -27,6 +27,7 @@
     <!-- Main Content -->
     <main>
         <!-- Iframe Chatbot -->
+        <!--
         <section class="chat-section">
             <iframe 
                 src="https://www.gptbots.ai/widget/eez5swzysx8wcvcncdiq3ee/chat.html" 
@@ -35,6 +36,7 @@
                 allow="microphone *"
                 style="border:none; border-radius: 10px;">
             </iframe>
+        -->
         </section>
     </main>
 
