modify livechat code

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
         <h1>Welcome to KhawLiang's Website 🎉</h1>
         <p>This is my first website! 🚀</p>
+        <p>Hello</p>
     </header>
 
     <!-- Theme Toggle Button -->
